--- a/placement_predictor.ipynb
+++ b/placement_predictor.ipynb
@@ -633,7 +633,10 @@
    "id": "83923c74-30c5-4424-b558-e13d46f3b972",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "print(os.getcwd())"
+   ]
   }
  ],
  "metadata": {
